examples/test/testpolicy19155.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19155
  namespace: namespace375
spec:
  podSelector:
    matchLabels:
      key20: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value45
          key33: value24
          key44: value34
      podSelector:
        matchLabels:
          key43: value32
